--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,7 +28,6 @@ body{
 }
 
 section{
-    max-width:1366px;
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -43,6 +42,7 @@ section{
 
 .hero{
     background: url("../img/block1_bg.jpg") no-repeat top center;
+    background-size: cover;
 }
     .main_menu_container{
         padding: 40px 35px 0 45px;
@@ -102,6 +102,7 @@ section{
                 }
     .phone_button_container{
         margin-top: 40px;
+        max-width: 1366px;
         width: 100%;
         display: flex;
         align-items: flex-start;
@@ -158,7 +159,7 @@ section{
     }
 
     .sale_container{
-        margin-top: 25px;
+        margin: 25px 0;
         color: white;
         font-size: 1.2rem;
         text-align: center;
