--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,7 +17,6 @@ html{
 body{
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
     font-size: 1rem;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -34,10 +33,15 @@ section{
     align-items: center;
 }
 .wrapper{
-    padding: 0px 5px;
     max-width: 1050px;
     width: 100%;
     margin: 0 auto;
+}
+
+.box-shadow_container{
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 0 14.25px 0.75px rgba(0, 0, 0, 0.1);
 }
 
 .hero{
@@ -151,12 +155,8 @@ section{
         margin-top: 150px;
         max-width: 815px;
         width: 100%;
-        background-color: #ffffff;
         padding: 1.333rem 2.333rem;
-        border-radius: 10px;
-        filter: drop-shadow(0 0 7.5px rgba(0,0,0,0.1));
     }
-
         .order_form{
             width: 100%;
             display: flex;
@@ -189,8 +189,7 @@ section{
                 background-image: -webkit-linear-gradient( 0deg, rgb(130,234,173) 0%, rgb(111,224,242) 100%);
                 background-image: -ms-linear-gradient( 0deg, rgb(130,234,173) 0%, rgb(111,224,242) 100%);
                 box-shadow: 0.342px 0.94px 4.8px 0.2px rgba(0, 0, 0, 0.2);
-                max-width: 189px;
-                width: 100%;
+                width: 189px;
                 height: 41px;
                 color: #000000;
                 font-weight: 300;
@@ -205,13 +204,8 @@ section{
         font-size: 1.2rem;
         text-align: center;
     }
-
 .yellow{
     color:#f6ff00;
-}
-
-
-.about_cleaning{
 }
     .small_header_container{
         margin-top: 4.286rem;
@@ -272,21 +266,19 @@ section{
         .cleaning{
             font-weight: 300;
             font-size: 1.143rem;
-            position: relative;
+            display: flex;
+            align-items: center;
         }
-        .cleaning:before{
-            content: "";
-            position: absolute;
-            top: 2px;
-            left: -25px;
+        .cleaning span{
             width: 13px;
             height: 13px;
             border-radius: 50%;
+            margin-right: 10px;
         }
-        .general:before{
+        .general{
             background-color: #f6ff00;
         }
-        .ongoing:before{
+        .ongoing{
             background-color: #82eaae;
         }
         .types_of_cleaning__info_container{
@@ -296,14 +288,224 @@ section{
             margin-top: 45px;
         }
         .types_of_cleaning__info{
-            border-radius: 10px;
-            background-color: #ffffff;
-            box-shadow: 0px 0px 14.25px 0.75px rgba(0, 0, 0, 0.1);
-            position: absolute;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             max-width: 490px;
             width: 100%;
-            height: 637px;
+            height: 640px;
         }
+            .types_of_cleaning__info > div{
+                width: 100%;
+            }
+            .info_content .info_header{
+                margin: 40px auto 0;
+            }
+                .info_header .cleaning{
+                    font-size: 1.6rem;
+                    font-weight: 500;
+                    justify-content: center;
+                }
+            .info_content .info_list_container{
+                font-size: 1.143rem;
+                margin-top: 35px;
+                font-weight: 400;
+            }
+                .info_list_container .info_list,.additional_list{
+                    padding:0 0 0 75px;
+                    font-size: 1.143rem;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                }
+                    .info_list_container .info_list .info_list_item,.additional_item{
+                        position: relative;
+                    }
+                    .info_list_container .info_list .info_list_item:before{
+                        content:'';
+                        width: 14px;
+                        height: 10px;
+                        background: url("../img/check.png") top center no-repeat;
+                        top: 50%;
+                        margin-top: -7px;
+                        left: -25px;
+                        position: absolute;
+                    }
+                    .info_content .additional_list_container{
+                        margin-top: 30px;
+                    }
+                    .info_content .additional_item:before{
+                        content:'+';
+                        width: 10px;
+                        height: 10px;
+                        color: #62d5e9;
+                        font-size: 1.143rem;
+                        top: 50%;
+                        margin-top: -7px;
+                        left: -35px;
+                        position: absolute;
+                    }
+            .price_container{
+                padding: 45px 0 35px;
+                border-top: 2px solid rgb(246, 246, 245);
+                gap: 20px;
+            }
+                .price_container .price {
+                    display: flex;
+                    flex: 0 1 100%;
+                    margin: 0 auto;
+                    justify-content: center;
+                    gap: 30px;
+                }
+                    .price .price_text {
+                        font-size: 1.143rem;
+                        font-weight: 300;
+                    }
+                        .price .price_text span{
+                            display: block;
+                            font-size: 0.938rem;
+                            color: #a1a1a1;
+                        }
+                    .price .price_amount {
+                        font-size: 1.867rem;
+                    }
+                .price_container .order_button{
+                    margin: 20px auto 0;
+                }
+            .counter_container{
+                margin: 50px 0 70px;
+            }
+                .counter{
+                    display: flex;
+                    justify-content: space-between;
+                    width: 100%;
+                    padding: 75px 60px 50px;
+                }
+                    .counter .counter_item{
+                        text-align: center;
+                    }
+                        .counter_item .counter_name{
+                            font-size: 1.6rem;
+                        }
+                        .counter_item .counter_date{
+                            color: #a1a1a1;
+                        }
+                        .counter_item .counter_numbers{
+                            font-size: 3.2rem;
+                            color: #6fe0f1;
+                        }
+                        .counter_item .counter_description,.counter_date{
+                            font-size: 1.133rem;
+                            font-weight: 300;
+                            margin-top: 10px;
+                        }
+.bullet_section{
+    background: url("../img/bullet_section_bg.jpg") no-repeat top center;
+    background-size: cover;
+}
+    .bullet_section .wrapper .small_header_container{
+        margin-top: 100px;
+    }
+    .bullet_section .wrapper .bullets_container{
+        margin:85px 0 95px;
+    }
+        .bullets_container .bullets{
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-around;
+        }
+            .bullets .bullet{
+                display: flex;
+                flex: 0 0 20%;
+                flex-direction: column;
+                gap: 35px;
+                align-items: center;
+                text-align: center;
+            }
+                .bullet .bullet_image{
+                    height: 130px;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+.FAQ{
+    background-color: #f8f8f8;
+}
+    .FAQ_tabs_container{
+        margin: 4rem 0 4.333rem;
+        width: 100%;
+    }
+        .question_groups{
+            display: flex;
+            gap: 2.333rem;
+            flex: 0 1 100%;
+            justify-content: space-between;
+        }
+            .question_group{
+                display: flex;
+                align-items: center;
+                flex: 0 0 30%;
+                height: 115px;
+                padding: 0 20px 0 50px;
+                gap: 10px;
+                justify-content: space-between;
+            }
+            .question_groups .active_group{
+                color: #62d5e9;
+            }
+                .group_name{
+                    font-size: 1.2rem;
+                }
+        .question_tabs{
+            padding: 1.5rem 6.667rem;
+            margin-top: 2.667rem;
+        }
+            .question_tab{
+                min-height: 220px;
+                display: none;
+            }
+            .active_question_tab{
+                display: block;
+            }
+                .question_list{
+                    list-style-position: inside;
+                    -moz-column-count: 2;
+                    -webkit-column-count: 2;
+                    column-count: 2;
+                    list-style-type: decimal;
+                }
+                    .question{
+                        margin-top: 15px;
+                        cursor: pointer;
+                    }
+                        .question span{
+                            margin-left: 5px;
+                            line-height: 1.2;
+                            border-bottom: 1px dashed #000000;
+                        }
+
+.reviews{
+    background: url("../img/reviews_bg.jpg")  center 160px no-repeat;
+    height: 800px;
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -316,6 +518,9 @@ section{
 
 
 @media screen and (max-width: 780px) {
+    .wrapper{
+        padding: 0 5px;
+    }
     .order_form{
         flex-direction: column;
         align-items: center;
@@ -323,5 +528,9 @@ section{
     }
     .field{
        width: 100%;
+    }
+    .types_of_cleaning__info_container{
+        flex-direction: column;
+        align-items: center;
     }
 }
